2022-05-21
    API change: in the MsvgElement changed the MsvgPaintCtx member to a pointer,
    because not all elements need one, only EID_SVG, EID_G, EID_USE, EID_RECT,
    EID_CIRCLE, EID_ELLIPSE, EID_LINE, EID_POLYLINE, EID_POLYGON, EID_PATH and
    EID_TEXT
    Added new supported elements: EID_LINEARGRADIENT, EID_RADIALGRADIENT (can
    be only sons of an EID_DEF element) and EID_STOP (can only be son of a
    gradient element), TODO: reference gradients for fill and stroke
2022-05-14
    Changes to the MGRX tests:
    - renamed rsvg2.c to showsvg.c
2022-05-14
    test/tread.c admit the parameter "-r" to show debug info in stdout when reading
    a svg file
2022-05-14
    Solved bug in MsvgGetCookedDims
    New rgbcolor define URL_COLOR for gradients (TODO) by now it fills with silver color
    Second function version to read a svg file:
      MsvgElement *MsvgReadSvgFile2(const char *fname, int *error, FILE *report);
    it has a extra parameter, if not NULL it prints debug info of the rading process
2022-05-03
    Updated docs to v0.22
    Added px_x_unit parameter to MsvgPathEltoPolyEl
2022-05-02
    Changes to the MGRX tests:
    - renderize paths by its own, using integer arithmetic
    - do not calculate bezier curves if they are out of the clip area
    - rsvg2 prints calculated image dimensions, so you can edit the svg file if
    the reported dimensions are bad values
    - rsvg2 checks for overflow when zooming
2022-05-01
    In MsvgPathEltoPolyEl limit the number of points generated for a bezier curve
    to MAX_BEZPOINTS
    Added an user-data parameter to MsvgSerCookedTree
    Added MsvgGetCookedDims, makes a rough estimation of the svg dimensions in a
    cooked tree
2022-04-22 
    corrections to the prog guide
2020-06-10 
    updated docs to v0.21
2020-06-09 
    Solving bugs
2020-06-04 
    updated docs to v0.20
2020-06-04 
    move svg examples to svgpics subfdir
2020-06-04 
    Solving bugs some tests improvements
2020-05-31 